fix(editor): Dark mode switch style fix and other tweaks (no-changelog) (#7599)
Github issue / Community forum post (link here to close automatically):

--- a/packages/design-system/src/css/_tokens.dark.scss
+++ b/packages/design-system/src/css/_tokens.dark.scss
@@ -126,7 +126,7 @@
 	--color-callout-secondary-background: var(--prim-color-secondary-alpha-025);
 	--color-callout-secondary-font: var(--prim-gray-0);
 
-	// Dialog
+	// Dialogs and overlays
 	--color-dialog-overlay-background: var(--prim-color-alt-j-alpha-075);
 	--color-dialog-overlay-background-dark: var(--prim-color-alt-j-alpha-075);
 
@@ -137,17 +137,20 @@
 	--color-value-survey-background: var(--prim-gray-740);
 	--color-value-survey-font: var(--prim-gray-0);
 
-	--border-color-base: var(--color-foreground-base);
-	--border-color-light: var(--color-foreground-light);
-
-	--border-base: var(--border-width-base) var(--border-style-base) var(--color-foreground-base);
+	// Switch (Activation, boolean)
+	--color-switch-background: var(--prim-gray-820);
+	--color-switch-toggle: var(--prim-gray-40);
 
 	// Various
 	--color-info-tint-1: var(--prim-gray-420);
 	--color-info-tint-2: var(--prim-gray-740);
-
+	--border-color-base: var(--color-foreground-base);
+	--border-color-light: var(--color-foreground-light);
+	--border-base: var(--border-width-base) var(--border-style-base) var(--color-foreground-base);
 	--node-type-supplemental-label-color-l: 100%;
 	--color-configurable-node-name: var(--color-text-lighter);
+	--color-secondary-link: var(--prim-color-secondary-tint-200);
+	--color-secondary-link-hover: var(--prim-color-secondary-tint-100);
 }
 
 body[data-theme='dark'] {
